--- a/style/pretty.css
+++ b/style/pretty.css
@@ -1,3 +1,10 @@
+
+
+#container {
+  width: 360px;
+  margin: 0 auto;
+  border: 2px solid gray;
+}
 body {
-  background: steelblue
+  background: steelblue;
 };
