--- a/style/pretty.css
+++ b/style/pretty.css
@@ -1,9 +1,24 @@
+h1 {
+  background: #00cc00;
+  color: white;
+  margin: 0;
+  padding: 10px 20px;
+  text-transform: uppercase;
+  font-size: 24px;
+  font-weight: normal;
 
+
+
+}
+ul {
+  list-style: none;
+}
 
 #container {
   width: 360px;
-  margin: 0 auto;
-  border: 2px solid gray;
+  margin: 100px auto;
+  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRYUXkyaTSCHW6I9nBBr2Uy6TL6-ENnzb4fPDBkFSURN21133hC");
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
 }
 .completed {
   color: gray;
